--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
     <div class="center">
-        <h1>EZ PZ</h1>
-        <p>LMN SQZ</p>
+        <h1>COMING SOON...</h1>
+        <p></p>
     </div>
 </body>
 
