Edit press kit links

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ http://www.templatemo.com/tm-503-newline
             <li>
               <div class="heading">
                 <h1>PRESS KIT</h1>
-                <span><a href="https://drive.google.com/uc?export=download&confirm=18EF&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download>DOWNLOAD</a></span>
+                <span><a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download>DOWNLOAD</a></span>
               </div>
               <div class="cd-half-width second-slide">
                 <div class="container">
@@ -144,7 +144,7 @@ http://www.templatemo.com/tm-503-newline
                         </div>
                         -->
                         <div class="primary-button">
-                          <a href="https://drive.google.com/uc?export=download&confirm=18EF&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px">Download Press Kit</a>
+                          <a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px">Download Press Kit</a>
                         </div>
                       </div>
                   </div>                  
