Fit videos for mobile

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@ http://www.templatemo.com/tm-503-newline
                   <div class="row">
                     <div class="col-md-12">
                       <div class="content first-content">
-                        <iframe width="672" height="378" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <h4>About this game</h4>
+                        <div style="position:relative;padding-top:45%;width:80%;left:10%">
+                          <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                         <h4>About this game</h4>
                         <p>1000 days to escape is a space arcade simulator. This game covers serious issues in an ironic form.</p>
                         <p>Life on the Earth is going to disappear. Due to huge temps of population growth and global development of human civilization, irreversible climate change and disturbance of stable processes in the biosphere of our planet occur. Calculations has shown that oxygen remains for 1000 days.</p>
                         <p>At the World Summit on the Global Security you've got a carte blanche to realize the largest space program ever. The main goal is to save as many people as you can.</p>
@@ -134,13 +136,13 @@ http://www.templatemo.com/tm-503-newline
                           </div>
                         </div>
                         <h4>Trailer</h4>
-                        <div>
-                          <iframe width="672" height="378" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div style="position:relative;padding-top:45%;width:80%;left:10%">
+                          <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <!--
                         <h4>Gameplay</h4>
-                        <div>
-                          <iframe width="672" height="378" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div style="position:relative;padding-top:45%;width:80%;left:10%">
+                          <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         -->
                         <div class="primary-button">
