--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ http://www.templatemo.com/tm-503-newline
         <footer>
           <p>Copyright &copy; 2019 Lemon Squeezy 
                                 
-        	| Designed by <em>TemplateMo</em></p>
+        	| <a href="mailto:info@lmnsqz.games">info@lmnsqz.games</a></p>
         </footer>
     
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
