Add gameplay video

--- a/index.html
+++ b/index.html
@@ -139,12 +139,10 @@ http://www.templatemo.com/tm-503-newline
                         <div style="position:relative;padding-top:45%;width:80%;left:10%">
                           <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <!--
                         <h4>Gameplay</h4>
                         <div style="position:relative;padding-top:45%;width:80%;left:10%">
-                          <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/Gdtze1qEKTM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/beJpGXidi4s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        -->
                         <div class="primary-button">
                           <a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px">Download Press Kit</a>
                         </div>
