Disable uppercase in main menu

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ http://www.templatemo.com/tm-503-newline
             <nav>
               <span class="cd-marker item-1"></span>
               <ul>
-                <li class="selected"><a href="#"><div class="image-icon"><img src="img/home-icon.png"></div><h6>GAME</h6></a></li>
-                <li><a href="#"><div class="image-icon"><img src="img/about-icon.png"></div><h6>PRESS KIT</h6></a></li>
-                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="img/featured-icon.png"></div><h6>STEAM</h6></a></li>
-                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="img/projects-icon.png"></div><h6>APP STORE</h6></a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="img/contact-icon.png"></div><h6>GOOGLE PLAY</h6></a></li>
+                <li class="selected"><a href="#"><div class="image-icon"><img src="img/home-icon.png"></div><h6>Game</h6></a></li>
+                <li><a href="#"><div class="image-icon"><img src="img/about-icon.png"></div><h6>Press Kit</h6></a></li>
+                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="img/featured-icon.png"></div><h6>Steam</h6></a></li>
+                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="img/projects-icon.png"></div><h6>App Store</h6></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="img/contact-icon.png"></div><h6>Google Play</h6></a></li>
               </ul>
             </nav> 
           </div> <!-- .cd-slider-nav -->
