Add App Store and Google Play buttons after game description

--- a/index.html
+++ b/index.html
@@ -82,13 +82,21 @@ http://www.templatemo.com/tm-503-newline
                           <li class="list">There are many different events. Triumphed an alien civilization? Use received resources for technological development or convert them to science points. Scientists said they are ready to reveal a series of innovations? Keep them or bargain with enemies is one of the difficult decisions you have to make..</li>
                         </ul>
                         <p>But remember. This is space. It does not cooperate.</p>
-                        <div class="primary-button">
-                          <a href="https://store.steampowered.com/app/1103100" target="_blank">Download on Steam</a>
+                        <div style="display: flex; justify-content: center;">
+                          <div class="primary-button small">
+                            <a href="https://store.steampowered.com/app/1103100" target="_blank">Steam</a>
+                          </div>
+                          <div class="primary-button small">
+                            <a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401" target="_blank">App Store</a>
+                          </div>
+                          <div class="primary-button small">
+                            <a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape" target="_blank">Google Play</a>
+                          </div>
                         </div>
                         <div>
                           <iframe height="50px" scrolling="no" src="https://embed.keymailer.co/g/games/82661/request_button/_10da77ee07" style="border: none" width="200px"></iframe>
                         </div>
-                      </div>
+                      <//div>
                     </div>
                   </div>                  
                 </div>
