Create a subpage for 1000 days to escape

--- a/1000dte/index.html
+++ b/1000dte/index.html
@@ -15,14 +15,14 @@ http://www.templatemo.com/tm-503-newline
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/fontAwesome.css">
-        <link rel="stylesheet" href="css/templatemo-style.css">
+        <link rel="stylesheet" href="../css/bootstrap.css">
+        <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="../css/fontAwesome.css">
+        <link rel="stylesheet" href="../css/templatemo-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
 
@@ -37,11 +37,11 @@ http://www.templatemo.com/tm-503-newline
             <nav>
               <span class="cd-marker item-1"></span>
               <ul>
-                <li class="selected"><a href="#"><div class="image-icon"><img src="img/home-icon.png"></div><h6>Game</h6></a></li>
-                <li><a href="#"><div class="image-icon"><img src="img/about-icon.png"></div><h6>Press Kit</h6></a></li>
-                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="img/featured-icon.png"></div><h6>Steam</h6></a></li>
-                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="img/projects-icon.png"></div><h6>App Store</h6></a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="img/contact-icon.png"></div><h6>Google Play</h6></a></li>
+                <li class="selected"><a href="#"><div class="image-icon"><img src="../img/home-icon.png"></div><h6>Game</h6></a></li>
+                <li><a href="#"><div class="image-icon"><img src="../img/about-icon.png"></div><h6>Press Kit</h6></a></li>
+                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="../img/featured-icon.png"></div><h6>Steam</h6></a></li>
+                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="../img/projects-icon.png"></div><h6>App Store</h6></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="../img/contact-icon.png"></div><h6>Google Play</h6></a></li>
               </ul>
             </nav> 
           </div> <!-- .cd-slider-nav -->
@@ -96,7 +96,7 @@ http://www.templatemo.com/tm-503-newline
                         <div>
                           <iframe height="50px" scrolling="no" src="https://embed.keymailer.co/g/games/82661/request_button/_10da77ee07" style="border: none" width="200px"></iframe>
                         </div>
-                      <//div>
+                      </div>
                     </div>
                   </div>                  
                 </div>
@@ -176,11 +176,11 @@ http://www.templatemo.com/tm-503-newline
         </footer>
     
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../js/plugins.js"></script>
+        <script src="../js/main.js"></script>
 
     </body>
 </html>
