Setup Elemetowers game on the main page

--- a/1000dte/index.html
+++ b/1000dte/index.html
@@ -38,10 +38,10 @@ http://www.templatemo.com/tm-503-newline
               <span class="cd-marker item-1"></span>
               <ul>
                 <li class="selected"><a href="#"><div class="image-icon"><img src="../img/home-icon.png"></div><h6>Game</h6></a></li>
-                <li><a href="#"><div class="image-icon"><img src="../img/about-icon.png"></div><h6>Press Kit</h6></a></li>
-                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="../img/featured-icon.png"></div><h6>Steam</h6></a></li>
-                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="../img/projects-icon.png"></div><h6>App Store</h6></a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="../img/contact-icon.png"></div><h6>Google Play</h6></a></li>
+                <li><a href="#"><div class="image-icon"><img src="../img/press-kit-icon.png"></div><h6>Press Kit</h6></a></li>
+                <li><a href="https://store.steampowered.com/app/1103100"><div class="image-icon"><img src="../img/steam-icon.png"></div><h6>Steam</h6></a></li>
+                <li><a href="https://apps.apple.com/us/app/1000-days-to-escape/id1483432401"><div class="image-icon"><img src="../img/app-store-icon.png"></div><h6>App Store</h6></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=org.godotengine.daystoescape"><div class="image-icon"><img src="../img/google-play-icon.png"></div><h6>Google Play</h6></a></li>
               </ul>
             </nav> 
           </div> <!-- .cd-slider-nav -->
@@ -79,7 +79,7 @@ http://www.templatemo.com/tm-503-newline
                           <li class="list">The star system is randomly generated at the start of each game.</li>
                           <li class="list">Over 25 planets with different characteristics.</li>
                           <li class="list">Some planets are inhabited by alien civilizations. To wage war or cooperate, it's up to you.</li>
-                          <li class="list">There are many different events. Triumphed an alien civilization? Use received resources for technological development or convert them to science points. Scientists said they are ready to reveal a series of innovations? Keep them or bargain with enemies is one of the difficult decisions you have to make..</li>
+                          <li class="list">There are many different events. Triumphed an alien civilization? Use received resources for technological development or convert them to science points. Scientists said they are ready to reveal a series of innovations? Keep them or bargain with enemies is one of the difficult decisions you have to make.</li>
                         </ul>
                         <p>But remember. This is space. It does not cooperate.</p>
                         <div style="display: flex; justify-content: center;">
@@ -106,7 +106,7 @@ http://www.templatemo.com/tm-503-newline
             <li>
               <div class="heading">
                 <h1>PRESS KIT</h1>
-                <span><a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download>DOWNLOAD</a></span>
+                <span><a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" target="_blank">DOWNLOAD</a></span>
               </div>
               <div class="cd-half-width second-slide">
                 <div class="container">
@@ -152,7 +152,7 @@ http://www.templatemo.com/tm-503-newline
                           <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/beJpGXidi4s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="primary-button">
-                          <a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px">Download Press Kit</a>
+                          <a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px" target="_blank">Download Press Kit</a>
                         </div>
                       </div>
                   </div>                  
