Add three Elementowers screenshots

--- a/index.html
+++ b/index.html
@@ -103,31 +103,13 @@ http://www.templatemo.com/tm-503-newline
                         <div class="row">
                           <h4>Screenshots</h4>
                           <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-01.jpg" data-lightbox="image-1"><img src="img/project-item-01.jpg"></a>
+                            <a href="img/screenshot-1.jpg" data-lightbox="image-1"><img src="img/screenshot-small-1.jpg"></a>
                           </div>
                           <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-02.jpg" data-lightbox="image-1"><img src="img/project-item-02.jpg"></a>
+                            <a href="img/screenshot-2.jpg" data-lightbox="image-1"><img src="img/screenshot-small-2.jpg"></a>
                           </div>
                           <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-03.jpg" data-lightbox="image-1"><img src="img/project-item-03.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-04.jpg" data-lightbox="image-1"><img src="img/project-item-04.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-05.jpg" data-lightbox="image-1"><img src="img/project-item-05.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-06.jpg" data-lightbox="image-1"><img src="img/project-item-06.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-07.jpg" data-lightbox="image-1"><img src="img/project-item-07.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-08.jpg" data-lightbox="image-1"><img src="img/project-item-08.jpg"></a>
-                          </div>
-                          <div class="col-md-4 col-md-push-1 project-item">
-                            <a href="img/item-09.jpg" data-lightbox="image-1"><img src="img/project-item-09.jpg"></a>
+                            <a href="img/screenshot-3.jpg" data-lightbox="image-1"><img src="img/screenshot-small-3.jpg"></a>
                           </div>
                         </div>
                         <h4>Trailer</h4>
