Replace VK link with Discord server link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ http://www.templatemo.com/tm-503-newline
                 <li><a href="#"><div class="image-icon"><img src="img/press-kit-icon.png"></div><h6>PRESS KIT</h6></a></li>
                 <li><a href="https://store.steampowered.com/app/1466970"><div class="image-icon"><img src="img/steam-icon.png"></div><h6>STEAM</h6></a></li>
                 <li><a href="https://twitter.com/lmnsqz_games"><div class="image-icon"><img src="img/twitter-icon.png"></div><h6>TWITTER</h6></a></li>
-                <li><a href="https://vk.com/lmnsqz"><div class="image-icon"><img src="img/vk-icon.png"></div><h6>VK</h6></a></li>
+                <li><a href="https://discord.gg/meQu57J"><div class="image-icon"><img src="img/discord-icon.png"></div><h6>DISCORD</h6></a></li>
               </ul>
             </nav> 
           </div> <!-- .cd-slider-nav -->
