--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@ http://www.templatemo.com/tm-503-newline
                           <div class="col-md-4 col-md-push-1 project-item">
                             <a href="img/screenshot-3.jpg" data-lightbox="image-1"><img src="img/screenshot-small-3.jpg"></a>
                           </div>
+                          <div class="col-md-4 col-md-push-1 project-item">
+                            <a href="img/screenshot-4.jpg" data-lightbox="image-1"><img src="img/screenshot-small-4.jpg"></a>
+                          </div>
+                          <div class="col-md-4 col-md-push-1 project-item">
+                            <a href="img/screenshot-5.jpg" data-lightbox="image-1"><img src="img/screenshot-small-5.jpg"></a>
+                          </div>
+                          <div class="col-md-4 col-md-push-1 project-item">
+                            <a href="img/screenshot-6.jpg" data-lightbox="image-1"><img src="img/screenshot-small-6.jpg"></a>
+                          </div>
                         </div>
                         <h4>Trailer</h4>
                         <div style="position:relative;padding-top:45%;width:80%;left:10%">
