--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ http://www.templatemo.com/tm-503-newline
             <li>
               <div class="heading">
                 <h1>PRESS KIT</h1>
-                <span><a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" target="_blank">DOWNLOAD</a></span>
+                <span><a href="https://drive.google.com/drive/folders/1OuYCHolGQpwrSVLB-Rut4D9YIpbbBrfR" target="_blank">DOWNLOAD</a></span>
               </div>
               <div class="cd-half-width second-slide">
                 <div class="container">
@@ -130,7 +130,7 @@ http://www.templatemo.com/tm-503-newline
                           <iframe style="position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/bXtHhasLP9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="primary-button">
-                          <a href="https://drive.google.com/uc?export=download&id=1FwZwIlYJrUVNJ4iEXhrC-EvuGrttaitV" download style="margin: 25px" target="_blank">Download Press Kit</a>
+                          <a href="https://drive.google.com/drive/folders/1OuYCHolGQpwrSVLB-Rut4D9YIpbbBrfR" download style="margin: 25px" target="_blank">Download Press Kit</a>
                         </div>
                       </div>
                   </div>                  
